--- a/src/scss/components/content/_service.scss
+++ b/src/scss/components/content/_service.scss
@@ -189,6 +189,11 @@ $teaser-icon-size-desktop: 48px;
   }
 }
 
+.service--units__container {
+  margin-bottom: $spacing-quadruple;
+  margin-top: $spacing-quadruple;
+}
+
 .service__units {
   background-color: $color-black-5;
   margin-top: $spacing-double;
@@ -199,10 +204,14 @@ $teaser-icon-size-desktop: 48px;
     display: block;
   }
 
+  .service__units__title {
+    margin-top: 0;
+  }
+
   .service__units__count-container {
     @include font-size(24px, 30px);
     display: block;
-    margin-top: $spacing-double;
+    margin-top: $spacing;
     white-space: nowrap;
 
     .service__units__count {
