--- a/src/scss/components/content/_unit.scss
+++ b/src/scss/components/content/_unit.scss
@@ -222,6 +222,10 @@
     }
   }
 
+  .unit__contact-row--email a {
+    word-break: break-all;
+  }
+
   .address {
     > * {
       display: block;
@@ -411,6 +415,7 @@
     padding-right: $spacing-and-half;
 
     @include breakpoint($breakpoint-m) {
+      margin-bottom: 0;
       width: 30%;
     }
   }
