UHF-1774: Hide node title from node template if hero block is shown.

--- a/templates/content/node.html.twig
+++ b/templates/content/node.html.twig
@@ -85,7 +85,7 @@
 <article{{ attributes.addClass(classes) }}>
 
   {{ title_prefix }}
-  {% if label and not page %}
+  {% if label and not page and not hide_label %}
     <h2{{ title_attributes }}>
       <a href="{{ url }}" rel="bookmark">{{ label }}</a>
     </h2>
