UHF-1774: Added support for paragraph revisions in Hero, Lower content and Sidebar content blocks.

--- a/modules/hdbt_content/templates/lower-content-block.html.twig
+++ b/modules/hdbt_content/templates/lower-content-block.html.twig
@@ -1,7 +1,11 @@
 {% if paragraphs %}
   <div class="lower-content layout-content">
     {% for paragraph in paragraphs %}
-      {{ drupal_entity('paragraph', paragraph.target_id) }}
+      {% if is_revision %}
+        {{ drupal_entity_revision('paragraph', paragraph.target_revision_id) }}
+      {% else %}
+        {{ drupal_entity('paragraph', paragraph.target_id) }}
+      {% endif %}
     {% endfor %}
   </div>
 {% endif %}
