--- a/modules/hdbt_content/templates/hero-block.html.twig
+++ b/modules/hdbt_content/templates/hero-block.html.twig
@@ -1,5 +1,11 @@
-{% if paragraph_id %}
+{% if paragraphs %}
   <div class="hero-wrapper {{ first_paragraph_grey }}">
-    {{ drupal_entity('paragraph', paragraph_id) }}
+    {% for paragraph in paragraphs %}
+      {% if is_revision %}
+        {{ drupal_entity_revision('paragraph', paragraph.target_revision_id) }}
+      {% else %}
+        {{ drupal_entity('paragraph', paragraph.target_id) }}
+      {% endif %}
+    {% endfor %}
   </div>
 {% endif %}
