UHF-2697: Fix content-liftup classname

--- a/src/scss/components/paragraphs/_content-liftup.scss
+++ b/src/scss/components/paragraphs/_content-liftup.scss
@@ -1,4 +1,4 @@
-.paragraph--type--content-liftup {
+.content-liftup {
   margin-left: $spacing-and-half;
   margin-right: $spacing-and-half;
   margin-top: $spacing-triple;
