--- a/templates/paragraphs/paragraph--content-liftup.html.twig
+++ b/templates/paragraphs/paragraph--content-liftup.html.twig
@@ -40,10 +40,7 @@
 #}
 {%
   set classes = [
-  'paragraph',
-  'paragraph--type--' ~ paragraph.bundle|clean_class,
-  view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
-  not paragraph.isPublished() ? 'paragraph--unpublished'
+  'content-liftup'
 ]
 %}
 
