--- a/templates/field/field--node--field-content.html.twig
+++ b/templates/field/field--node--field-content.html.twig
@@ -39,7 +39,9 @@
 
 {%
   set classes = [
-    'paragraph-content'
+    'paragraph-content',
+    'components',
+    'components--upper',
   ]
 %}
 
