--- a/src/scss/layout/_lower-content.scss
+++ b/src/scss/layout/_lower-content.scss
@@ -1,10 +1,6 @@
 .lower-content {
-  margin-top: $spacing-double;
+  @include component-margin-top();
   width: 100%;
-
-  @include breakpoint($breakpoint-l) {
-    margin-top: $spacing-quadruple;
-  }
 
   .layout-content {
     margin: 0;
