--- a/src/scss/components/paragraphs/_columns.scss
+++ b/src/scss/components/paragraphs/_columns.scss
@@ -1,29 +1,4 @@
 .columns {
-  margin-top: $spacing-quadruple;
-
-  @include breakpoint($breakpoint-l) {
-    margin-top: $spacing-sextuple;
-  }
-}
-
-.columns__container {
-  padding-top: 0;
-
-  @include breakpoint(max-width $breakpoint-s) {
-    max-width: 100%;
-  }
-}
-
-.columns__title {
-  display: block;
-  margin-bottom: $spacing-triple;
-  margin-right: auto;
-  margin-top: 0;
-  max-width: 640px;
-  width: 100%;
-}
-
-.columns__content {
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -54,11 +29,13 @@
   align-self: stretch;
 
   @include breakpoint($breakpoint-m) {
-    margin: 0 $spacing-and-half;
+    margin-left: $spacing-and-half;
+    margin-right: $spacing-and-half;
   }
 
   @include breakpoint($breakpoint-l) {
-    margin: 0 $spacing-double;
+    margin-left: $spacing-double;
+    margin-right: $spacing-double;
   }
 
   &.column--50 {
@@ -91,31 +68,30 @@
 .has-sidebar .main-content {
 
   // Columns in content area and inside accordion.
-  .columns__content {
+  .columns {
     @include breakpoint($breakpoint-l) {
       flex-direction: column;
     }
 
-    @include breakpoint(1220px) {
+    @include breakpoint($breakpoint-xl) {
       flex-direction: row;
     }
+  }
+  .columns__column.column--50 {
+    @include breakpoint($breakpoint-l) {
+      width: auto;
 
-    .columns__column.column--50 {
-      @include breakpoint($breakpoint-l) {
-        width: auto;
-
-        &:not(:first-of-type) {
-          margin-top: $spacing-double;
-        }
+      &:not(:first-of-type) {
+        margin-top: $spacing-double;
       }
+    }
 
-      @include breakpoint(1220px) {
+    @include breakpoint($breakpoint-xl) {
+      margin-top: 0;
+      width: 50%;
+
+      &:not(:first-of-type) {
         margin-top: 0;
-        width: 50%;
-
-        &:not(:first-of-type) {
-          margin-top: 0;
-        }
       }
     }
   }
