UHF-2519: Adjusted footer styles to match the latest layout

--- a/modules/hdbt_content/templates/footer-top-content.html.twig
+++ b/modules/hdbt_content/templates/footer-top-content.html.twig
@@ -1,4 +1,4 @@
-<div class="footer-top__content">
-  <h2>{{ title }}</h2>
+<nav role="navigation" aria-labelledby="footer-top__content__title" class="footer-top__content">
+  <h2 id="footer-top__content__title" class="footer-top__content__title">{{ title }}</h2>
   {{ content }}
-</div>
+</nav>
