--- a/src/scss/components/paragraphs/_columns.scss
+++ b/src/scss/components/paragraphs/_columns.scss
@@ -5,7 +5,8 @@
 
   @include breakpoint($breakpoint-m) {
     flex-direction: row;
-    margin: 0 -#{$spacing-double} 0;
+    margin-left: -#{$spacing-double};
+    margin-right: -#{$spacing-double};
     max-width: $content-area-wrapper-width-max;
   }
 
