--- a/templates/paragraphs/paragraph--columns.html.twig
+++ b/templates/paragraphs/paragraph--columns.html.twig
@@ -31,7 +31,7 @@
         {% set right_column_classes = right_column_classes|merge(['column--50']) %}
       {% endif %}
 
-      <div class="container__content columns">
+      <div class="component__content columns">
         <div class="{{ left_column_classes|join(' ') }}">
           {{ content.field_columns_left_column }}
         </div>
