UHF-2697: Add components related classes to service and unit-pages too

--- a/templates/content/tpr-service.html.twig
+++ b/templates/content/tpr-service.html.twig
@@ -19,7 +19,7 @@
     {{ content.field_sidebar_content }}
   {% endblock sidebar_block %}
   {% block main_content %}
-    <div class="enriched-content has-sidebar">
+    <div class="enriched-content has-sidebar components components--service">
       {{ content.field_content }}
     </div>
   {% endblock main_content %}
