--- a/templates/content/tpr-unit.html.twig
+++ b/templates/content/tpr-unit.html.twig
@@ -15,7 +15,7 @@
   {% endblock sidebar_block %}
 
   {% block main_content %}
-    <div class="enriched-content has-sidebar">
+    <div class="enriched-content has-sidebar components components--unit">
       {{ content.field_content }}
     </div>
   {% endblock main_content %}
