--- a/templates/paragraphs/paragraph--content-cards.html.twig
+++ b/templates/paragraphs/paragraph--content-cards.html.twig
@@ -1,69 +1,42 @@
-{#
-/**
- * @file
- * Default theme implementation to display a paragraph.
- *
- * Available variables:
- * - paragraph: Full paragraph entity.
- *   Only method names starting with "get", "has", or "is" and a few common
- *   methods such as "id", "label", and "bundle" are available. For example:
- *   - paragraph.getCreatedTime() will return the paragraph creation timestamp.
- *   - paragraph.id(): The paragraph ID.
- *   - paragraph.bundle(): The type of the paragraph, for example, "image" or "text".
- *   - paragraph.getOwnerId(): The user ID of the paragraph author.
- *   See Drupal\paragraphs\Entity\Paragraph for a full list of public properties
- *   and methods for the paragraph object.
- * - content: All paragraph items. Use {{ content }} to print them all,
- *   or print a subset such as {{ content.field_example }}. Use
- *   {{ content|without('field_example') }} to temporarily suppress the printing
- *   of a given child element.
- * - attributes: HTML attributes for the containing element.
- *   The attributes.class element may contain one or more of the following
- *   classes:
- *   - paragraphs: The current template type (also known as a "theming hook").
- *   - paragraphs--type-[type]: The current paragraphs type. For example, if the paragraph is an
- *     "Image" it would result in "paragraphs--type--image". Note that the machine
- *     name will often be in a short form of the human readable label.
- *   - paragraphs--view-mode--[view_mode]: The View Mode of the paragraph; for example, a
- *     preview would result in: "paragraphs--view-mode--preview", and
- *     default: "paragraphs--view-mode--default".
- * - view_mode: View mode; for example, "preview" or "full".
- * - logged_in: Flag for authenticated user status. Will be true when the
- *   current user is a logged-in member.
- * - is_admin: Flag for admin user status. Will be true when the current user
- *   is an administrator.
- *
- * @see template_preprocess_paragraph()
- *
- * @ingroup themeable
- */
-#}
-
 {% set title = content.field_content_cards_title.0 %}
 {% set design = content.field_content_cards_design.0|first|clean_class %}
 
+{% set has_koro = false %}
+{% if design == 'small-cards' %}
+  {% set design_class = 'component--content-cards-small' %}
+{% elseif design == 'large-cards' %}
+  {% set design_class = 'component--content-cards-large' %}
+{% elseif design == 'small-cards-grey' %}
+  {% set design_class = 'component--content-cards-small component--content-cards-grey' %}
+  {% set has_koro = true %}
+{% elseif design == 'large-cards-grey' %}
+  {% set design_class = 'component--content-cards-large component--content-cards-grey' %}
+  {% set has_koro = true %}
+{% else %}
+  {% set design_class = null %} {# This should not happen #}
+{% endif %}
+
 {%
   set classes = [
-    'content-cards',
-    'content-cards--' ~ design,
-    view_mode ? 'content-cards--' ~ view_mode|clean_class,
+    'component',
+    'component--content-cards',
+    design_class,
+    has_koro ? 'component--has-koro',
   ]
 %}
 
 {% block paragraph %}
   <div{{ attributes.addClass(classes) }}>
-    {% if 'grey' in design %}
+    {% if has_koro %}
       {% include '@hdbt/misc/koro.twig' with {koro: koro, flip: true } %}
     {% endif %}
-    {% embed "@hdbt/misc/container.twig" with {container_element: 'content-cards'} %}
-      {% block container_content %}
-        {% if title %}
-        <h2 class="content-cards__title">{{ title }}</h2>
-        {% endif %}
-        <div class="content-cards__content">
-          {{ content|without('field_content_cards_design', 'field_content_cards_title') }}
-        </div>
-      {% endblock %}
-    {% endembed %}
+    <div class="component__container">
+      {% if title %}
+        <h2 class="component__title">{{ title }}</h2>
+      {% endif %}
+      <div class="component__content content-cards">
+        {{ content|without('field_content_cards_design', 'field_content_cards_title') }}
+      </div>
+    </div>
   </div>
 {% endblock paragraph %}
