--- a/templates/views/views-view--service-units.html.twig
+++ b/templates/views/views-view--service-units.html.twig
@@ -39,10 +39,10 @@
 {% embed "@hdbt/misc/container.twig" with {container_element: 'service__units'} %}
   {% block container_content %}
     <div class="service__units__header">
-      <h2 class="service__units__title">{% trans %}Service locations{% endtrans %}</h2>
+      <h2 class="service__units__title">{% trans %}Service points{% endtrans %}</h2>
       <span class="service__units__count-container">
         <span class="service__units__count">{{ total_rows }}</span>
-        {% trans with {'context': 'Service units count'}%}unit{% plural total_rows %}units{% endtrans %}
+        {% trans with {'context': 'Service units count'}%}service point{% plural total_rows %}service points{% endtrans %}
       </span>
     </div>
     <div{{ attributes.addClass(classes) }}>
