UHF-2519: Add back-to-top link to footer and style it to work like in the layouts

--- a/templates/block/block--system-branding-block.html.twig
+++ b/templates/block/block--system-branding-block.html.twig
@@ -17,7 +17,7 @@
 {% set attributes = attributes.addClass('block--branding') %}
 
 {% block content %}
-  <a href="{{ path('<front>') }}" class="logo logo--header" title="{{ site_name }}" rel="home">
+  <a href="{{ path('<front>') }}" class="logo logo--header" title="{{ site_name }}" id="logo--header" rel="home">
     {% embed "@hdbt/misc/logo.twig" %}{% endembed %}
     <span class="site-name">{{ site_name }}</span>
   </a>
