--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -90,14 +90,23 @@
 .footer-bottom {
   border-top: 1px solid $color-black-30;
   margin-top: $spacing-triple;
+  overflow: hidden;
   padding-bottom: $spacing-triple;
   padding-top: $spacing-and-half;
 
   @include breakpoint($breakpoint-m) {
+    margin-top: $spacing-sextuple;
+    padding-bottom: 0;
+  }
+}
+
+.footer-bottom__navigation-wrapper {
+  @include breakpoint($breakpoint-m) {
     align-items: center;
     display: flex;
-    margin-top: $spacing-sextuple;
-    padding-bottom: $spacing-double;
+    flex-wrap: nowrap;
+    float: left;
+    margin-bottom: $spacing-triple;
   }
 }
 
@@ -141,6 +150,23 @@
         display: none;
       }
     }
+  }
+}
+
+a.footer__back-to-top {
+  @include font-size(24px,24px);
+  align-items: center;
+  display: flex;
+  float: right;
+  font-weight: 500;
+  height: 40px; // Match footer logo height
+  margin-top: $spacing-triple;
+  text-decoration: none;
+
+  @include breakpoint($breakpoint-m) {
+    margin-bottom: $spacing-triple;
+    margin-left: $spacing-double;
+    margin-top: 0;
   }
 }
 
