--- a/src/scss/layout/_layout-main-wrapper.scss
+++ b/src/scss/layout/_layout-main-wrapper.scss
@@ -1,3 +1,7 @@
+.layout-main-wrapper * {
+  scroll-margin-top: 144px;
+}
+
 .has-sidebar--first .layout-main-wrapper {
   @include breakpoint($breakpoint-l) {
     display: flex;
